--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,10 @@
-@use 'base/variables' as v;
+@use '../base/variables' as v;
+@use 'base/mixins' as m;
 
 .header {
     background-color: v.$verde;
+
+    @include m.telefono;
 
     .contenido-header{
         padding: 2rem;
@@ -17,7 +20,14 @@
 }
 
 .navegacion-principal {
+    display: flex;
+    gap: 2rem;
     a {
         color: v.$blanco;
+        font-size: 2.4rem;
+
+        &:hover {
+            color: v.$amarillo;
+        }
     }
 }
