--- a/src/scss/layout/_gallery.scss
+++ b/src/scss/layout/_gallery.scss
@@ -41,6 +41,19 @@
     }
 }
 
+.btn-cerrar {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: white;
+    border: none;
+    color: black;
+    display: grid;
+    place-items: center;
+    font-weight: 700;
+    cursor: pointer;
+}
+
 @keyframes fadeIn {
     0% {
         opacity: 0;
